# ve_data_science

./: .gitignore  .lintr  .markdownlint.yaml  .pre-commit-config.yaml  .ve_data_science  404.html  README.md  _quarto.yml  air.toml  index.html  index.qmd  mkdocs.yml  pyproject.toml  sitemap.xml  system_dependencies.R
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: github-actions-ci-cd-best-practices.instructions.md  markdown-gfm.instructions.md  pull-request-assistant.instructions.md  python.instructions.md  r.instructions.md  self-explanatory-code-commenting.instructions.md
.github/workflows/: automerge.yml  ci.yaml  gh_deploy.yml  python-tests.yml  r-tests.yml  weekly_soil_report.yml
analysis/abiotic/: ERA5-Land Rainfall Data Download Script-General.py  download_era5_climate_variable.py  era5_climate_data_download_maliau.py  era5_land_climate_data_download.py  era5_rainfall_data_download_maliau.py  maliau_climate_data_processing_script.py  maliau_elevation_data_processing_script.py
analysis/animal/: fg_population_density.py
analysis/core/: maliau_grid_definition.py  maliau_grid_definition.toml
analysis/site/: build_config_maliau.R  build_modular_config_maliau.py  maliau_litter_data.R  maliau_site_definition.py  maliau_soil_data.R
analysis/troubleshoot/: runtime_per_cell.R
analysis/utils/: build_config.R  create_data_config.R
bib/: refs.bib
data/derived/: MANIFEST.yaml
data/sites/: maliau_site_definition.py
derived_variables/: index.html
docs/: _config.yml  derived_variables.md  getting_started.md  girhub_overview.md  github_overview.md  index.html  index.md  search.json  uploading_r_scripts.md  using_globus.md  using_hpc.md  uv_setup.md  validation_database.md  what_are_those_odd_files.md
docs/experimental/: Example_R.html  Example_R.md  Example_python.html  Example_python.md
docs/manual/: getting_started.html  github_overview.html  uploading_r_scripts.html  using_globus.html  what_are_those_odd_files.html
experimental/: Example_R.ipynb  Example_R.qmd  Example_python.ipynb  Example_python.qmd  Setup.md
experimental/jupyter/: Example_R.ipynb  Example_R.md  Example_R.myst.md  Example_R_executed.md  Example_python.ipynb  Example_python.md  Example_python.myst.md  Example_python_executed.md  notebooks.sh
experimental/quarto/: Example_R.md  Example_R.qmd  Example_python.qmd  notebook.sh
generation/soil/: mimic_ve_example.R
generation_scripts/abiotic/: climate_data_processing_script.py
generation_scripts/plant/: plant_data.py
generation_scripts/soil/: mimic_ve_example.R
getting_started/: index.html
girhub_overview/: index.html
github_overview/: index.html
hpc_jobs/: .gitignore  hpc_conda_env_setup.sh  hpc_ve_run_batch.py  hpc_ve_run_batch.sh  hpc_ve_run_batch_submit.sh  hpc_ve_run_job_spec.py  job_config.toml
maintenance/: metadata_check.R
maintenance_tool/: __init__.py  data_directories.py  globus.py  maintenance_tool.py  script_directories.py
maintenance_tool/test/: conftest.py  test_data_directories.py  test_maintenance_tool.py  test_script_directories.py
manual/: getting_started.qmd  github_overview.qmd  uploading_r_scripts.qmd  using_globus.qmd  what_are_those_odd_files.qmd
notebooks/test_Arne/: Untitled.md
notebooks/tutorial/: Tutorial.md
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
templates/: Jupyter_notebook_R_template.ipynb  README.md  R_markdown_template.Rmd  R_script_template.r  myst_markdown_template.md  python_script_template.py  yaml_metadata_specification.yaml  yaml_template.yaml
tools/: build_config.R  build_config_template.R  build_config_user.R  collect_data_paths.R  edit_config.R
uploading_r_scripts/: index.html
using_globus/: index.html
validation_database/: index.html
what_are_those_odd_files/: index.html
(+345 files in other folders)
