[project]
name = "ve-data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "virtual-ecosystem", 
  "matplotlib"
]

[dependency-groups]
dev = ["virtual-ecosystem @ git+https://github.com/ImperialCollegeLondon/virtual_ecosystem.git"]
dev-stable = ["virtual-ecosystem @ git+https://github.com/ImperialCollegeLondon/virtual_ecosystem.git@3c6e75"]

[tool.uv]
default-groups = []
conflicts = [
  [{ group = "dev" }, { group = "dev-stable" }]
]
