[project]
name = "ve-data-science"
version = "0.1.0"
description = "This repository is the data science repository for the Virtual Ecosystem project. It is used to store all the research and analysis being used to parameterise and run the Virtual Ecosystem model."
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["virtual-ecosystem"]

[dependency-groups]
dev = ["virtual-ecosystem @ git+https://github.com/ImperialCollegeLondon/virtual_ecosystem.git"]
dev-stable = ["virtual-ecosystem @ git+https://github.com/ImperialCollegeLondon/virtual_ecosystem.git@3c6e75"]

[tool.uv]
default-groups = []
conflicts = [
  [{ group = "dev" }, { group = "dev-stable" }]
]
